Generate static site and update content

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -45,7 +45,7 @@
                     </div>
                     {% endif %}
                     
-                    <p class="mb-3">{{ post.excerpt }}</p>
+                    <p class="mb-3">{{ post.excerpt | safe }}</p>
                     
                     <a href="/{{ lang }}/blog/{{ post.slug }}" class="btn btn-outline-primary">
                         {{ translations[lang]['read_more'] }} <i class="fas fa-arrow-right ms-1"></i>
