--- a/templates/notebooks.html
+++ b/templates/notebooks.html
@@ -17,7 +17,7 @@
                 {% for notebook in notebooks %}
                 <div class="notebook mb-4 pb-4 {% if not loop.last %}border-bottom{% endif %}">
                     <h4><a href="/{{ lang }}/notebooks/{{ notebook.slug }}" class="text-decoration-none">{{ notebook.title }}</a></h4>
-                    <p class="text-muted mb-2">{{ notebook.description }}</p>
+                    <p class="text-muted mb-2">{{ notebook.description | safe }}</p>
                     <div class="mb-3">
                         {% if notebook.tags %}
                             {% for tag in notebook.tags %}
