--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <!-- Academicons for Google Scholar -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/academicons@1.9.4/css/academicons.min.css">
-    <link href="{{ url_for('static', path='css/main.css') }}" rel="stylesheet">
+    <link href="/static/css/main.css" rel="stylesheet">
     
     <!-- Meta tags -->
     <meta name="description" content="{% block description %}{{ translations[lang]['site_description'] }}{% endblock %}">
@@ -155,7 +155,7 @@
 
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('static', path='js/main.js') }}"></script>
+    <script src="/static/js/main.js"></script>
     {% block extra_scripts %}{% endblock %}
 </body>
 </html>
