--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,8 @@
                         <i class="fas fa-brain me-2"></i>{{ translations[lang]['what_i_do_title'] }}
                     </h3>
                     <p class="card-text">{{ translations[lang]['what_i_do_text'] }}</p>
-                    <a href="/{{ lang }}/publications" class="btn btn-outline-primary">
-                        {{ translations[lang]['nav_publications'] }} <i class="fas fa-arrow-right ms-1"></i>
+                    <a href="/{{ lang }}/blog/what-i-do" class="btn btn-outline-primary">
+                        {{ translations[lang]['read_more'] }} <i class="fas fa-arrow-right ms-1"></i>
                     </a>
                 </div>
             </div>
